Day3/initcontainer.yaml
apiVersion: v1
kind: Pod
metadata:
  name: simple-init-pod
spec:
  containers:
    - name: main-app
      image: nginx:alpine 
      ports:
        - containerPort: 80
